# open-weight-agent

./: .gitignore  .gitmodules  README.md  SCHEMA_DISCOVERY_PLAN.md  TRICENTIS_BACKEND_FIX.md  main.py  pyproject.toml
agent_poc/agent/: runner.py  state.py  types.py
agent_poc/agent/prompts/: nlp_to_cypher.txt  text_to_cypher.txt  (+1 more)
agent_poc/config/: config.yaml  config.yaml.example  loader.py
agent_poc/models/: bedrock_backend.py  factory.py  openai_compatible.py  tricentis_backend.py
agent_poc/prompts/: system.txt
agent_poc/tests/: conftest.py  test_config.py  test_mcp_adapter.py  test_registry.py  test_runner.py  test_sandbox.py  test_static_tools.py  test_types.py
agent_poc/tools/: cypher_tool.py  generated.py  mcp_adapter.py  registry.py
graph_pipeline/: context_store.py  cypher_generator.py  extractor.py  models.py  neo4j_writer.py  sampler.py  schema_discovery.py  validator.py
graph_pipeline/loaders/: __init__.py  base.py  csv_loader.py  json_loader.py  jsonl_loader.py  sql_loader.py
graph_pipeline/prompts/: entity_extraction.txt  schema_proposal.txt  schema_proposal_ambiguous.txt  schema_proposal_nodes.txt  schema_proposal_relationships.txt
graph_pipeline/schemas/: ambiguous_fields.json  node_types.json  relationship_types.json
scripts/: benchmark.py  ingest.py  query.py
tests/: conftest.py  test_context_store.py  test_cypher_generator.py  test_extractor.py  test_loaders.py  test_sampler.py  test_schema_discovery.py  test_validator.py
tests/fixtures/: header_only.jsonl  sample.csv  sample.jsonl  sample.sqlite  sample.tsv  sample_array.json  sample_nested_object.json  sample_object_with_array.json
tests/integration/: test_neo4j_writer.py
ui/: app.py
(+4 files in other folders)
