[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-poc"
version = "0.1.0"
description = "Synchronous open-weight LLM agent with tool use"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
agent-poc = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_poc"]

[tool.pytest.ini_options]
testpaths = ["agent_poc/tests"]
markers = [
    "integration: requires a running Ollama instance",
]
